Changelog for Shake (* = breaking change)

    Add Semigroup/Monoid instances to UserRule
    Improve time recording for unsafeExtraThread, parallel, batch
    #553, improve file-hash performance when nothing changes
*   Require addBuiltinRule to take a BuiltinCheck argument
*   Make the third argument to BuiltinRun a real ADT
    Disable all the lintTrack functions unless lint is enabled
*   Change the Development.Shake.Rule.track* functions to lintTrack*
    #584, add Semigroup/Monoid instances for Action
    Add produces to declare which untracked files a rule produces
    Add cacheNever to note which rules cannot be cached
    #583, add replaceDirectory1
    Add addOracleHash for oracles with reduced storage requirements
0.16.4, released 2018-04-04
    #185, add addOracleCache which doesn't always rerun
    #576, remove incorrect Cabal description
    #575, print --help message at Quiet verbosity or above
0.16.3, released 2018-02-23
    Allow reading data files from next to the executable
    #566, require extra-1.6.1
    #565, deal with multi-file rules that don't create their contents
    Improve the documentation of getDirectoryContents
0.16.2, released 2018-02-13
    Set the correct lower bound on unordered-containers of 0.2.7
0.16.1, released 2018-02-11
    Support process-1.6.3.0
    #290, add withTempFileInside and withTempDirInside
    #549, Semigroup-Monoid proposal support
    Hadrian-462, fail gracefully if on-disk formats change
    #469, only print timing information at normal verbosity or above
    #340, add runAfter
    #372, deprecate askOracleWith
    #520, only record each dependency once
    #548, rebuild the Ninja files, if they change, restart
    #547, make Ninja --lint checking see through phonys
    #546, support Ninja line continuations in more places
    #470, make --verbose and --quiet help text clearer
    #534, make writeFile' and writeFileChanged create the directory